--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fabric": "^5.2.4",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-device-detect": "^2.2.2",
+    "react-dom": "18.2.0",
+    "react-hls-player": "^3.0.7",
+    "react-player": "^2.10.1"
   },
   "devDependencies": {
     "eslint": "8.22.0",
